@@ -1,5 +1,3 @@
-; @(#)$Ident: dist.ini 2014-01-05 23:13 pjf ;
-
 name = App-Doh
 
 [Prereqs]
@@ -19,6 +17,7 @@ Pod::Xhtml        = 1.61
 Template          = 2.22
 Text::Markdown    = 1.000031
 Twiggy            = 0.1021
+URI               = 1.60
 Web::Simple       = 0.020
 
 [Prereqs / ConfigureRequires]
