@@ -1,14 +1,12 @@
-# @(#)Ident: Doh.pm 2014-01-03 15:34 pjf ;
-
 package App::Doh;
 
 use 5.010001;
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 27 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 29 $ =~ /\d+/gmx );
 
 use Moo;
 use Class::Usul::Constants;
-use Class::Usul::Types      qw( BaseType );
+use Class::Usul::Types qw( BaseType );
 
 # Private attributes
 has '_usul' => is => 'ro', isa => BaseType,
@@ -40,7 +38,7 @@ App::Doh - An easy way to document a project using Markdown
 
 =head1 Version
 
-This documents version v0.1.$Rev: 27 $ of L<App::Doh>
+This documents version v0.1.$Rev: 29 $ of L<App::Doh>
 
 =head1 Description
 
