@@ -1,9 +1,6 @@
-# @(#)Ident: CommonLinks.pm 2013-12-09 02:52 pjf ;
-
 package App::Doh::Role::CommonLinks;
 
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 22 $ =~ /\d+/gmx );
 
 use Moo::Role;
 
