@@ -1,18 +1,16 @@
-# @(#)Ident: 04critic.t 2013-04-22 22:45 pjf ;
-
 use strict;
 use warnings;
-use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 1 $ =~ /\d+/gmx );
-use File::Spec::Functions;
-use FindBin qw( $Bin );
-use lib catdir( $Bin, updir, q(lib) );
+use File::Spec::Functions qw( catdir updir );
+use FindBin               qw( $Bin );
+use lib               catdir( $Bin, updir, 'lib' );
 
-use English qw(-no_match_vars);
 use Test::More;
 
 BEGIN {
    $ENV{AUTHOR_TESTING} or plan skip_all => 'Critic test only for developers';
 }
+
+use English qw( -no_match_vars );
 
 eval "use Test::Perl::Critic -profile => catfile( q(t), q(critic.rc) )";
 
